--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,16 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
     <mat-nav-list>
-      <a mat-list-item routerLink="/signup" (click)="sidenav.close()"><mat-icon>face</mat-icon>
+      <a mat-list-item routerLink="/signup" (click)="sidenav.close()"
+         *ngIf="!isAuth"><mat-icon>face</mat-icon>
         <span class="nav-caption">Sign Up</span></a>
-      <a mat-list-item routerLink="/login" (click)="sidenav.close()"><mat-icon>input</mat-icon>
-        <span class="nav-caption">Login</span></a>
-      <a mat-list-item routerLink="/training" (click)="sidenav.close()"><mat-icon>fitness_center</mat-icon>
+      <a mat-list-item routerLink="/login" (click)="sidenav.close()"
+         *ngIf="!isAuth"><mat-icon>input</mat-icon>
+        <span class="nav-caption">Login</span></a><a mat-list-item routerLink="/login" (click)="sidenav.close()"
+         *ngIf="isAuth"><mat-icon>output</mat-icon>
+        <span class="nav-caption">Logout</span></a>
+      <a mat-list-item routerLink="/training" (click)="sidenav.close()"
+         *ngIf="isAuth"><mat-icon>fitness_center</mat-icon>
         <span class="nav-caption">Training</span></a>
     </mat-nav-list>
   </mat-sidenav>
@@ -17,9 +22,10 @@
       <div><a routerLink="/">Logo</a></div>
       <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
         <ul fxLayout fxLayoutGap="10px">
-          <li><a routerLink="/signup">Sign Up</a></li>
-          <li><a routerLink="/login">Login</a></li>
-          <li><a routerLink="/training">Training</a></li>
+          <li><a routerLink="/signup" *ngIf="!isAuth">Sign Up</a></li>
+          <li><a routerLink="/login" *ngIf="!isAuth">Login</a></li>
+          <li><a routerLink="/training" *ngIf="isAuth">Training</a></li>
+          <li><a routerLink="/training" *ngIf="isAuth">Logout</a></li>
         </ul>
       </div>
     </mat-toolbar>
