--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="col-lg-12 signup" fxLayout="column" fxLayoutAlign="start center">
     <form fxLayout="column"  #f="ngForm" (ngSubmit)="signUp(f)">
-      <mat-form-field appearance="outline">
+      <mat-form-field appearance="outline" color="accent">
         <input matInput required placeholder="Your email" ngModel name="email" email>
       </mat-form-field>
-      <mat-form-field appearance="outline">
+      <mat-form-field appearance="outline" color="accent">
         <input matInput type="password" required placeholder="Your password" ngModel name="password">
       </mat-form-field>
-      <mat-form-field appearance="outline">
+      <mat-form-field appearance="outline" color="accent">
         <input matInput [matDatepicker]="picker" placeholder="Choose your birthday"
                [max]="maxDate"
                required ngModel name="birthdate">
