--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -3,7 +3,7 @@
     <mat-card fxFlex.xs="100%" fxFlex="350px">
       <mat-card-title>Time to start a new workout!</mat-card-title>
       <mat-card-content>
-        <mat-form-field>
+        <mat-form-field color="accent">
           <mat-select placeholder="Choose Exercise" ngModel name="exercise" required>
             <mat-option *ngFor="let exercise of exercises"
                         [value]="exercise.id">{{ exercise.name }}</mat-option>
