--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group *ngIf="!ongoingTraining">
+<mat-tab-group *ngIf="!ongoingTraining" color="accent">
   <mat-tab label="New Exercise">
     <app-new-training></app-new-training>
   </mat-tab>
