--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,9 @@
         <span class="nav-caption">Sign Up</span></a>
       <a mat-list-item routerLink="/login" (click)="sidenav.close()"
          *ngIf="!isAuth"><mat-icon>input</mat-icon>
-        <span class="nav-caption">Login</span></a><a mat-list-item routerLink="/login" (click)="sidenav.close()"
-         *ngIf="isAuth"><mat-icon>output</mat-icon>
+        <span class="nav-caption">Login</span></a>
+      <a mat-list-item (click)="sidenav.close()"
+         *ngIf="isAuth"><mat-icon>logout</mat-icon>
         <span class="nav-caption" (click)="onLogout()">Logout</span></a>
       <a mat-list-item routerLink="/training" (click)="sidenav.close()"
          *ngIf="isAuth"><mat-icon>fitness_center</mat-icon>
