--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -28,3 +28,9 @@
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
   <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 </mat-table>
+<div>
+  <mat-paginator #paginator
+                 [pageSize]="5"
+                 [pageSizeOptions]="[1, 5, 10, 20]">
+  </mat-paginator>
+</div>
