--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
-    <mat-nav-list>
+    <mat-nav-list style="padding-bottom: 30px">
       <a mat-list-item routerLink="/signup" (click)="sidenav.close()"
          *ngIf="!isAuth"><mat-icon>face</mat-icon>
         <span class="nav-caption">Sign Up</span></a>
       <a mat-list-item routerLink="/login" (click)="sidenav.close()"
          *ngIf="!isAuth"><mat-icon>input</mat-icon>
         <span class="nav-caption">Login</span></a>
-      <a mat-list-item (click)="sidenav.close()"
-         *ngIf="isAuth"><mat-icon>logout</mat-icon>
-        <span class="nav-caption" (click)="onLogout()">Logout</span></a>
+      <a mat-list-item *ngIf="isAuth" (click)="sidenav.close(); onLogout()">
+        <mat-icon>logout</mat-icon>
+        <span class="nav-caption">Logout</span></a>
       <a mat-list-item routerLink="/training" (click)="sidenav.close()"
          *ngIf="isAuth"><mat-icon>fitness_center</mat-icon>
         <span class="nav-caption">Training</span></a>
@@ -26,7 +26,7 @@
           <li><a routerLink="/signup" *ngIf="!isAuth">Sign Up</a></li>
           <li><a routerLink="/login" *ngIf="!isAuth">Login</a></li>
           <li><a routerLink="/training" *ngIf="isAuth">Training</a></li>
-          <li><a routerLink="/training" *ngIf="isAuth" (click)="onLogout()">Logout</a></li>
+          <li><a *ngIf="isAuth" (click)="onLogout()">Logout</a></li>
         </ul>
       </div>
     </mat-toolbar>
