--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -17,7 +17,12 @@
       <mat-checkbox ngModel name="terms" required>
         Agree to Terms and Conditions
       </mat-checkbox>
-      <button mat-raised-button type="submit" color="accent" [disabled]="f.invalid">Sign Up</button>
+      <div fxLayoutAlign="center center">
+        <mat-spinner [value]="" color="accent" *ngIf="loadingState"></mat-spinner>
+      </div>
+      <button mat-raised-button type="submit" color="accent"
+              *ngIf="!loadingState"
+              [disabled]="f.invalid">Sign Up</button>
     </form>
   </div>
 </div>
