--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -1,10 +1,11 @@
 <div fxLayoutAlign.gt-xs="center center" style="margin-top: 5px">
+  <mat-spinner color="accent" *ngIf="loadingState"></mat-spinner>
   <mat-form-field fxFlex.gt-xs="40%"  fxFlex.xs="100%" color="accent">
     <input matInput type="text" (keyup)="doFilter($event.target.value)"
            placeholder="Filter">
   </mat-form-field>
 </div>
-<mat-table [dataSource]="dataSource" matSort>
+<mat-table [dataSource]="dataSource" matSort *ngIf="!loadingState">
   <ng-container matColumnDef="date">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
     <mat-cell *matCellDef="let element">{{ element.date | date }}</mat-cell>
@@ -28,7 +29,7 @@
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
   <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 </mat-table>
-<div>
+<div *ngIf="!loadingState">
   <mat-paginator #paginator
                  [pageSize]="5"
                  [pageSizeOptions]="[1, 5, 10, 20]">
