--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -3,7 +3,7 @@
     <mat-card fxFlex.xs="100%" fxFlex="350px">
       <mat-card-title>Time to start a new workout!</mat-card-title>
       <mat-card-content>
-        <mat-form-field color="accent" *ngIf="!loadingState">
+        <mat-form-field color="accent" *ngIf="!loadingState && exercises">
           <mat-select placeholder="Choose Exercise"
                       ngModel name="exercise" required>
             <mat-option *ngFor="let exercise of exercises"
@@ -14,10 +14,12 @@
           <mat-spinner *ngIf="loadingState" color="accent"></mat-spinner>
         </div>
       </mat-card-content>
-      <mat-card-actions>
+      <mat-card-actions fxLayoutAlign="center">
         <button mat-raised-button color="accent"
-                *ngIf="!loadingState"
+                *ngIf="!loadingState && exercises"
                 [disabled]="f.invalid">Start</button>
+        <button mat-raised-button color="accent"
+                *ngIf="!loadingState && !exercises" type="button" (click)="fetchExercises()">Fetch again</button>
       </mat-card-actions>
     </mat-card>
   </form>
