--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,14 +1,27 @@
-<div class="welcome" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-sm="row" fxLayoutGap.gt-sm="10px">
-  <section>
-    <h1>ACTIVITY</h1>
-    <p>Stay active and enjoy better health and more fun!</p>
-  </section>
-  <section>
-    <h1>COMMUNITY</h1>
-    <p>Get to know other people who share your passion!</p>
-  </section>
-  <section>
-    <h1>CHALLENGES</h1>
-    <p>Never stop! Dive into new challenges every day</p>
-  </section>
+<div class="welcome" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-sm="row"
+     fxLayoutGap="10px">
+  <mat-card class="card">
+    <mat-card-title>ACTIVITY</mat-card-title>
+    <mat-card-content>Stay active and enjoy better health and more fun!</mat-card-content>
+  </mat-card>
+  <mat-card class="card">
+    <mat-card-title>COMMUNITY</mat-card-title>
+    <mat-card-content>Get to know other people who share your passion!</mat-card-content>
+  </mat-card>
+  <mat-card class="card">
+    <mat-card-title>CHALLENGES</mat-card-title>
+    <mat-card-content>Never stop! Dive into new challenges every day</mat-card-content>
+  </mat-card>
+<!--  <section>-->
+<!--    <h1>ACTIVITY</h1>-->
+<!--    <p>Stay active and enjoy better health and more fun!</p>-->
+<!--  </section>-->
+<!--  <section>-->
+<!--    <h1>COMMUNITY</h1>-->
+<!--    <p>Get to know other people who share your passion!</p>-->
+<!--  </section>-->
+<!--  <section>-->
+<!--    <h1>CHALLENGES</h1>-->
+<!--    <p>Never stop! Dive into new challenges every day</p>-->
+<!--  </section>-->
 </div>
